<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        style="@style/style_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgSeries"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/anne"
                android:contentDescription="@string/imagem_serie"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/txtDetalhes"
                style="@style/style_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalhes"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_detalhe"
                style="@style/style_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="12sp"
                android:text="@string/cabecalho_serie"
                android:textColor="#0C0C0C" />

            <TextView
                android:id="@+id/sinopse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopse"
                style="@style/style_subtitle"
                />

            <TextView
                android:id="@+id/textSinopseConteudo"
                style="@style/style_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/conteudo_serie"
                android:textColor="#0B0B0B"
                />


        </LinearLayout>
    </ScrollView>






</LinearLayout>